# work

./: .gitignore  rename_75B.py
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.fish  local_setup.sh  local_setup.zsh  setup.bash  setup.fish  setup.sh  setup.zsh
devel/.private/agv_demo/: .catkin  local_setup.fish  setup.fish
devel/.private/arm_driver/: .catkin  local_setup.sh  setup.sh
devel/.private/arm_servo/: .catkin  local_setup.sh
devel/.private/baseline_rrt/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.fish  setup.sh
devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh  setup.fish  setup.sh
devel/.private/d435_demo/: .catkin  .rosinstall  local_setup.sh  setup.fish
devel/.private/dual_75b_arm_gazebo/: .catkin  setup.sh
devel/.private/dual_75b_arm_moveit_config/: .catkin  .rosinstall  local_setup.fish  setup.fish  setup.sh
devel/lib/agv_demo/: agv_demo.py
logs/arm_driver/: build.cmake.000.log.stderr
map/: 2026011901.bt  2026011902.bt  2026011903.bt  2026011904.bt  2026011905.bt  2026030901.bt  2026030902.bt  2026030903.bt  2026030904.bt  2026030905.bt  2026030906.bt  2026030907.bt  2026030908.bt  2026030909.bt  2026030910.bt  2026030911.bt  2026030912.bt  2026030913.bt  2026030914.bt  2026030915.bt  2026030916.bt  2026031001.bt  2026031002.bt  2026031003.bt  2026031005.bt  2026031006.bt
pose/: 2026011901.jsonl  2026011902.jsonl  2026030901.jsonl  2026030902.jsonl  2026030903.jsonl  2026031001.jsonl
src/baseline_rrt/: CMakeLists.txt  PACKAGE_COMPLETE.md  README.md  TESTING_GUIDE.md  baseline_rrt_planner_plugin.xml
src/baseline_rrt/config/: baseline_rrt_planning.yaml
src/baseline_rrt/include/baseline_rrt/: baseline_rrt_planner_manager.h  basic_rrt.h  basic_rrt_star.h
src/baseline_rrt/src/: baseline_rrt_planner_manager.cpp  basic_rrt.cpp  basic_rrt_star.cpp
src/clearance_heatmap_msgs/: CMakeLists.txt  package.xml
src/clearance_heatmap_server/: CMakeLists.txt  package.xml
src/dual_arm_rrt_planner/: CMakeLists.txt  dual_arm_trrt_planner_plugin.xml  package.xml  plugin_description.xml  revert_pre_heatmap_apf.patch
src/dual_arm_rrt_planner/config/: apf_debug.rviz
src/dual_arm_rrt_planner/include/dual_arm_rrt_planner/: dual_arm_clearance_objective.h  dual_arm_collision_interface.h  dual_arm_distance_interface.h  dual_arm_heatmap_objective.h  dual_arm_planner_manager.h  dual_arm_rrt.h  dual_arm_tree_visualizer.h  dual_arm_trrt_planner_manager.h  heatmap_field.h  local_trrt.h  planner_config.h  planning_context.h
src/dual_arm_rrt_planner/include/dual_arm_rrt_planner/modules/: apf_module.h  goal_bias_module.h  module_base.h  node_rejection_module.h  t_rrt_module.h  variable_step_module.h
src/dual_arm_rrt_planner/scripts/: apf_force_visualizer.py  pick_place_demo.py  simple_apf_visualizer.py  test_dual_rrt_planner.py
src/dual_arm_rrt_planner/src/: dual_arm_clearance_objective.cpp  dual_arm_collision_interface.cpp  dual_arm_distance_interface.cpp  dual_arm_heatmap_objective.cpp  dual_arm_planner_manager.cpp  dual_arm_rrt.cpp  dual_arm_tree_visualizer.cpp  dual_arm_trrt_planner_manager.cpp  heatmap_field.cpp  local_trrt.cpp  planner_config.cpp
src/dual_arm_rrt_planner/src/modules/: apf_module.cpp  goal_bias_module.cpp  node_rejection_module.cpp  t_rrt_module.cpp  variable_step_module.cpp
src/improved_rrt_planner/: CMakeLists.txt  improved_rrt_planner_plugin.xml  package.xml
src/improved_rrt_planner/config/: improved_rrt_planning.yaml
src/improved_rrt_planner/include/improved_rrt_planner/: improved_rrt.h  improved_rrt_planner_manager.h  planning_context.h
src/improved_rrt_planner/include/improved_rrt_planner/modules/: apf_module.h  goal_bias_module.h  module_base.h  node_rejection_module.h  t_rrt_module.h  variable_step_module.h
src/improved_rrt_planner/scripts/: publish_wheel_states.py
src/improved_rrt_planner/src/: improved_rrt.cpp  improved_rrt_planner_manager.cpp
src/improved_rrt_planner/src/modules/: apf_module.cpp  goal_bias_module.cpp  node_rejection_module.cpp  t_rrt_module.cpp  variable_step_module.cpp
src/map_build/: CMakeLists.txt  README.md
src/map_build/config/: build_master.rviz  octomap.rviz
src/map_build/launch/: build_master_auto.launch  build_master_manual.launch  moveit_real_with_map.launch  octomap_filter.launch  octomap_from_d435_left.launch  octomap_from_d435_right.launch  octomap_from_head_d435.launch  publish_camera_left_tf.launch  publish_camera_right_tf.launch  tabletop_segmentation.launch
src/map_build/scripts/: joint_state_renamer.py  lift_to_joint_state.py  load_octomap_to_moveit.py  manual_cloud_control.py  playback_dual_arm_joints.py  record_dual_arm_joints.py  run_segmentation.py  simple_d435_driver.py
src/map_build/src/: octomap_filter_node.cpp  point_process.cpp  tabletop_segmentation_node.cpp
src/map_process/: CMakeLists.txt  package.xml
src/map_process/launch/: process_env.launch
src/map_process/rviz/: map_process.rviz
src/map_process/scripts/: process_octomap_markers.py
src/map_process/src/: map_rebuild.cpp  points_to_octomap_bt.cpp
src/octomap_env_processor/: CMakeLists.txt  package.xml
src/octomap_env_processor/launch/: process_env.launch
src/octomap_env_processor/scripts/: process_octomap_markers.py
src/octomap_env_processor/src/: map_rebuild.cpp  octomap_bt_to_points.cpp  points_to_octomap_bt.cpp
src/ompl_stats_planner/: CMakeLists.txt  ompl_stats_planner_plugin.xml  package.xml
src/ompl_stats_planner/include/ompl_stats_planner/: ompl_stats_planner_manager.h
src/ompl_stats_planner/src/: ompl_stats_planner_manager.cpp
src/planner_benchmark/: CMakeLists.txt  README.md  USAGE.md
src/planner_benchmark/config/: test_poses.yaml  test_poses_dual_arm.yaml
src/planner_benchmark/launch/: data_collection.launch  data_collection_dual_arm.launch
src/planner_benchmark/scripts/: __init__.py  check_available_metrics.py  manual_data_collection.py  paper_data_collection.py  passive_data_collection.py  run_all_planners.sh
src/real_play/: CMakeLists.txt  package.xml
src/table_obstacles/: CMakeLists.txt  package.xml
(+1064 files in other folders)
