<?xml version="1.0"?>
<package format="2">
  <name>dual_arm_rrt_planner</name>
  <version>1.0.0</version>
  <description>MoveIt planner plugin for native OMPL TRRT dual-arm joint-space planning with centralized YAML configuration.</description>
  <maintainer email="fang@example.com">fang</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>pluginlib</depend>
  <depend>std_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>clearance_heatmap_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>ompl</depend>

  <export>
    <moveit_core plugin="${prefix}/dual_arm_trrt_planner_plugin.xml"/>
  </export>
</package>
