<?xml version="1.0"?>
<package format="2">
  <name>improved_rrt_planner</name>
  <version>1.0.0</version>
  <description>Custom Improved RRT planner plugin for MoveIt</description>
  
  <maintainer email="user@todo.todo">User</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>eigen</depend>

  <export>
    <moveit_core plugin="${prefix}/improved_rrt_planner_plugin.xml"/>
  </export>
</package>
