<?xml version="1.0"?>
<package format="2">
  <name>ompl_stats_planner</name>
  <version>0.1.0</version>
  <description>MoveIt OMPL planner wrapper that publishes PlannerData tree statistics.</description>

  <maintainer email="fang@todo.todo">fang</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>pluginlib</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>ompl</depend>

  <export>
    <moveit_core plugin="${prefix}/ompl_stats_planner_plugin.xml"/>
  </export>
</package>
